Refactor production tests and module boundaries